@@ -175,7 +175,7 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbars=0, scrollbars=0,
 </font></a>
 <br>
 <b><font color="yellow" face="Verdana" size="2">Pic of the day</font></b>
-<hr>
+            <hr>
 <center><p align="center"><font face="Verdana, Arial, Helvetica" size="1"><a href="http://bp6.gamesquad.net/cgi-bin/schlabo/potd.pl"><img alt="No picture is available for today." border="0" src="doc3_files/potd_na_110x83.gif"></a></font></p></center>
 <br>
 <center></center>
